# ShunYaku

./: .gitignore  AGENTS.md  LICENSE  README.md  ShunYaku.spec  pyproject.toml  run_shunyaku.py
scripts/: build_macos_app.sh
src/shunyaku/: __init__.py  app.py  assets.py  background.py  config.py  hotkey.py  ocr.py  translator.py  ui.py
src/shunyaku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_hotkey.py  test_ocr.py
